# Huffman

./: CMakeLists.txt  README.md  main.c  sdd.c  sdd.h
Arbre de Huffman/: Arbre de huffman naif.c  Arbre de huffman naif.h  arbre de huffman optimisé.c  arbre de huffman optimisé.h
Dico/: 3.c  3.h  dico.h  dico_naif.c  dico_naif.h
Dictionary/: naive_dictionary.h
Doxygen/: Doxyfile
Doxygen/latex/: annotated.tex  conversion_8h.tex  files.tex  md__r_e_a_d_m_e.tex  refman.tex  sdd_8h.tex  struct_element.tex  struct_noeud.tex  structl_noeud.tex
Huffman naif/: huffman_tree.c
Huffman_tree/: Optimized_huffman_tree.h
Lettertobit/C_File/: conversion.c
Lettetobit/Fichier c/: conversion.c  taille fichier.c
Lettetobit/Header/: conversion.h  taille fichier.h  taille_fichier.h
Occurences/: Occurence_naif.c
Occurrences/: Optimized_occurrences.c  occurence optimisé.h  occurrence optimisé.c  occurrence optimisé.h  occurrences_naif.c  occurrences_naif.h
compression/: 4.c  4.h  Compression_huffman_naif.c  Compression_huffman_naif.h  naive_compression.c
decompression/: naive_decompression.c
décompression/: 5.c  5.h  Décompression_naif.c
headers/1/: a.h
headers/2/: 1.h  2.h
sdd/: sdd.h
source/: main.c
source/Files/Dictionary/: naive_dictionary.c
source/Files/Huffman_tree/: Huffman_naive_tree.c
source/Files/Occurrences/: Optimized_occurrences.c  Optimized_occurrences.h  naive_occurrences.h
source/Files/compression/: naive_compression.c
source/Files/decompression/: naive_decompression.c  naive_decompression.h
src/2/: 1.c  2.c
(+4 files in other folders)
